--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "nba-list",
   "version": "0.1.0",
+  "engines": {
+    "node": "12.17.0"
+  },
   "private": true,
   "dependencies": {
     "react": "^16.14.0",
@@ -13,7 +16,7 @@
     "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
-    "start": "PORT=26637 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
